--- a/IcesiHealth/database-deployment.yml
+++ b/IcesiHealth/database-deployment.yml
@@ -19,7 +19,12 @@ spec:
       - name: couchdb
         image: couchdb
         ports:
-        - containerPort: 5984
+          - containerPort: 5984
+        env:
+          - name: COUCHDB_USER
+            value: admin
+          - name: COUCHDB_PASSWORD
+            value: password
 ---        
 apiVersion: v1
 kind: Service
